Resolved the singlePost img overflow issue and title center alignment issue

--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -5,15 +5,18 @@
 
 .singlePostWrapper{
     padding: 20px;
-    padding-right: 0;
 }
 
 
 .singlePostImg{
-    width: 100%;
     height: 300px;
     border-radius : 5px;
     object-fit: cover;
+}
+
+.singlePostImgDiv{
+    display: flex;
+    justify-content: center;
 }
 
 .singlePostTitle{
@@ -23,7 +26,8 @@
 }
 
 .singlePostEdit{
-    float: right;
+    display: flex;
+    justify-content: right;
     font-size: 30px;
 }
 
